# VisibleTransfer

./: CMakeLists.txt  CRC.h  ImageCode.cpp  ImageCode.h  README.md  codedef.h  config.json  crc.hpp  decode.cpp  encode.cpp  gen_decode.cpp  gen_pic.cpp  gen_vid.sh  locate_pattern.cpp  main.cpp  mat.hpp  play.cpp  resolve_vid.sh
bin-test/: check  check.cpp
demo/: README.md
src/: CMakeLists.txt  codedef.h  crc.hpp  decode.cpp  encode.cpp  mat.hpp
